# ledSign

./: .gitignore  CHANGELOG.md  README.md  boot.py  deploy.py  leds.py  main.py  pyproject.toml  requirements.txt  settings.py  us_sensor.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-feature-request.md  2-bug-report.md  bug-report.md  feature-request.md
.github/workflows/: Python.yml  Release.yml  python.yml  release.yml
lib/: leds.py  server.py  usSensor.py  us_sensor.py
lib/static/: default.css  index.html  main.js
lib/templates/: index.html
