[project]
name = "ledSign"
version = "0.3.0"
description = "LED Schild Projekt für Pico W"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "mpremote>=1.0.0",
    "requests>=2.28.0",
]
requires-python = ">=3.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
allow_zero_version = true

[tool.semantic_release.changelog]
mode = "update"